--- a/src/App.css
+++ b/src/App.css
@@ -597,11 +597,10 @@ td {
 }
 
 .nav{
-    width: 100%;
-    background-color: #fafafa;
-    box-shadow: 0 2px 4px -2px rgba(17, 17, 17, 0.15);
-    top: 0;
-    z-index: 500;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  float: left;
 }
 
 .custom-select {
@@ -649,4 +648,58 @@ td {
 
 .custom-select{
 	font-weight:normal;
+}
+
+.header-container {
+  width: 100%;
+  background-color: #fafafa;
+  box-shadow: 0 2px 4px -2px rgba(17, 17, 17, 0.15);
+  position: fixed;
+  top: 0;
+  z-index: 500;
+}
+
+.header {
+  height: 50px;
+  width: auto;
+  max-width: 1400px;
+  margin: 0 auto;
+  overflow: visible;
+  position: relative;
+}
+
+.header, .container-large {
+  width: auto;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.header-logo {
+  border-collapse: collapse;
+  float: left;
+}
+
+.nav2-container{
+  display: none;
+  position: fixed;
+  z-index: 25;
+  overflow: hidden;
+  background: #fcfcfc;
+  border-radius: 10px;
+  box-shadow: 0 50px 100px -20px rgba(50, 50, 93, 0.25), 0 30px 60px -30px rgba(0, 0, 0, 0.3), 0 -18px 60px -10px rgba(0, 0, 0, 0.025);
+}
+
+.nav > li {
+  float: left;
+  list-style: none;
+  /* font-size: 18px; */
+  transition: background 70ms ease-out;
+  -webkit-transition: background 70ms ease-out;
+  -moz-transition: background 70ms ease-out;
+  -o-transition: background 70ms ease-out;
+  position: relative;
+}
+
+.espacio{
+  margin-top: 60px;
 }
