--- a/src/App.css
+++ b/src/App.css
@@ -217,6 +217,10 @@ a.button:hover {
   position: relative;
   overflow: hidden;
   user-select: none;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-left:10px;
+  margin-right:10px;
 }
 
 .player-card-name {
@@ -378,6 +382,8 @@ h2 {
   font-size: 16px;
   margin-top: 8px;
   margin-bottom: 15px;
+  margin-right: 200px;
+  
 }
 
 .versions-list {
@@ -396,10 +402,12 @@ h2 {
   overflow-y: hidden;
   white-space: nowrap;
   margin: 0;
-  margin-bottom: -6px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
+  margin-right: 400px;
 }
 
 .versions-list-el {
@@ -627,7 +635,8 @@ td {
 	background-repeat: no-repeat, repeat;
 	background-position: right .7em top 50%, 0 0;
 	background-size: .65em auto, 100%;
-   margin-top:40px;
+   margin-top:20px;
+   margin-bottom: 15px;
 }
 
 .custom-select::-ms-expand {
