--- a/src/App.css
+++ b/src/App.css
@@ -245,7 +245,7 @@ a.button:hover {
   position: absolute;
   text-align: center;
   font-size: 36px;
-  font-family: "DINPro-Bold", "Open Sans", sans-serif;
+  font-family: "DINPro-Bold", "Open Sans", sans-serif, "MarkPro";
   font-weight: bold;
   color: #fff;
   width: 66px;
