--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'MarkPro';
+  src: 
+  url(./fonts/MarkPro.otf) format('otf'),
+    url(./fonts/MarkPro-Bold.otf) format('otf'),
+    url(./fonts/MarkPro-Black.otf) format('otf'),
+    url(./fonts/MarkPro-Heavy.otf) format('otf');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
